# algo_lab

./: CMakeLists.txt  binary_knapsack.c  fractional_knapsack.c  graph.c  lcs.c  matrix_chain_multiplication.c  sort.c
